components/networking/routes/argocd-httproute.yaml
# ingress/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: cicd
spec:
  parentRefs:
    - name: admin-gateway
      namespace: ingress
  hostnames: [argocd.ascode.click]
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
